Adds Research Guides links to subject librarian directory and bio pages

--- a/src/patterns/__environment__/60-templates/bio.hbs
+++ b/src/patterns/__environment__/60-templates/bio.hbs
@@ -53,6 +53,13 @@
       {{assign '_config.cv' false}}
     {{/if}}
 
+    {{! Determine if the librarian has some CV data. }}
+    {{#if (not (eq (indexOf config 'Research Guides') false))}}
+      {{assign '_config.guides' true}}
+    {{else}}
+      {{assign '_config.guides' false}}
+    {{/if}}
+
     {{! Override config data. }}
     {{assign 'config' _config}}
     {{unassign '_config'}}
@@ -69,6 +76,7 @@
       {{assign 'config.education' false}}
       {{assign 'config.contact' false}}
       {{assign 'config.subjects' false}}
+      {{assign 'config.guides' false}}
       {{assign 'config.cv' false}}
     {{else if (eq config 'Quote')}}
       {{assign 'config' (arrayify null)}}
@@ -78,6 +86,7 @@
       {{assign 'config.education' false}}
       {{assign 'config.contact' false}}
       {{assign 'config.subjects' false}}
+      {{assign 'config.guides' false}}
       {{assign 'config.cv' false}}
     {{else if (eq config 'Description')}}
       {{assign 'config' (arrayify null)}}
@@ -87,6 +96,7 @@
       {{assign 'config.education' false}}
       {{assign 'config.contact' false}}
       {{assign 'config.subjects' false}}
+      {{assign 'config.guides' false}}
       {{assign 'config.cv' false}}
     {{else if (eq config 'Education')}}
       {{assign 'config' (arrayify null)}}
@@ -96,6 +106,7 @@
       {{assign 'config.education' true}}
       {{assign 'config.contact' false}}
       {{assign 'config.subjects' false}}
+      {{assign 'config.guides' false}}
       {{assign 'config.cv' false}}
     {{else if (eq config 'Contact Info')}}
       {{assign 'config' (arrayify null)}}
@@ -105,6 +116,7 @@
       {{assign 'config.education' false}}
       {{assign 'config.contact' true}}
       {{assign 'config.subjects' false}}
+      {{assign 'config.guides' false}}
       {{assign 'config.cv' false}}
     {{else if (eq config 'Subject Areas')}}
       {{assign 'config' (arrayify null)}}
@@ -114,6 +126,17 @@
       {{assign 'config.education' false}}
       {{assign 'config.contact' false}}
       {{assign 'config.subjects' true}}
+      {{assign 'config.guides' false}}
+      {{assign 'config.cv' false}}
+    {{else if (eq config 'Research Guides')}}
+      {{assign 'config' (arrayify null)}}
+      {{assign 'config.image' false}}
+      {{assign 'config.quote' false}}
+      {{assign 'config.bio' false}}
+      {{assign 'config.education' false}}
+      {{assign 'config.contact' false}}
+      {{assign 'config.subjects' false}}
+      {{assign 'config.guides' true}}
       {{assign 'config.cv' false}}
     {{else if (eq config 'CV')}}
       {{assign 'config' (arrayify null)}}
@@ -123,6 +146,7 @@
       {{assign 'config.education' false}}
       {{assign 'config.contact' false}}
       {{assign 'config.subjects' false}}
+      {{assign 'config.guides' false}}
       {{assign 'config.cv' true}}
     {{/if}}
 
